<resources>
    <string name="app_name">Bluetooth Serial Interface</string>

    <string name="messages">Messages:</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="paired_devices">Paired devices:</string>
    <string name="no_messages">No messages sent!</string>
    <string name="no_bluetooth">Bluetooth not available.</string>
    <string name="device_name_format">Device: %s</string>
    <string name="status_connecting">Status: Connecting</string>
    <string name="status_connected">Status: Connected</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_failed">Connection Failed.</string>
    <string name="bluetooth_unavailable">Connection Failed.</string>
    <string name="message_send_error">Error sending message!</string>
    <string name="you_sent">You</string>

<!--    activity main-->
    <string name="main_actty_button_name_connectors_cfg">Open configuration file</string>

<!--    activity preferences-->
    <string name="pref_pinout_filename_defaultval">not selected</string>
    <string name="pref_pinout_descriptor_buttonName">Specify file with pinout namings</string>
    <string name="pref_pinout_results_buttonName">Specify file where to store results</string>

<!--    activity deviceControl-->
    <string name="ctl_actty_tittle_connecting">Connecting to device: %s</string>
    <string name="ctl_actty_tittle_connected">Connected to %s</string>
    <string name="ctl_actty_number_of_connected_boards">Number of connected boards: %s</string>


    <string name="cmd2_button_name">check all</string>
    <string name="cmd1_button_name">set</string>


    <string name="set_pin_cmd">set</string>
    <string name="check_cmd">check</string>
    <string name="check_all_cmd_special_argument">all</string>
    <string name="set_output_voltage">voltage</string>
    <string name="get_all_boads_online">getboards</string>
</resources>
