<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_pinout_descriptor_buttonName"
            android:key="pref_pinout_descriptor"
            android:defaultValue="@string/pref_pinout_filename_defaultval">
    </PreferenceScreen>
    <PreferenceScreen
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_pinout_results_buttonName"
            android:key="pref_results_file"
            android:defaultValue="@string/pref_pinout_filename_defaultval"
            />

    <!--    <ListPreference-->
<!--            android:key="pref_key_list"-->
<!--            android:title="List"-->
<!--            android:defaultValue="value1"/>-->

</PreferenceScreen>